# sharedlib

./: .gitignore  LICENSE  MANIFEST.in  README.md  pyproject.toml  setup.py
.github/workflows/: release.yml
sharedlib/: __init__.py  config.py  register.py
