[project]
name = "sharedlib"
version = "0.0.1"
description = "Share packages for monorepo services"
readme = "README.md"
requires-python = ">=3.8"
license = {file = "LICENSE"}
keywords = ["monorepo", "shared", "sharedlib", "lib", "repo"]

classifiers = [
  "License :: OSI Approved :: MIT License",
  "Intended Audience :: Developers",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.8",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
]

dependencies = []

[project.urls]
"Homepage" = "https://github.com/paqstd-dev/sharedlib"
"Bug Tracker" = "https://github.com/paqstd-dev/sharedlib/issues"

[tool.uv]
dev-dependencies = [
  "pre-commit",
]

[tool.setuptools_scm]

[build-system]
requires = ["setuptools >= 61.0"]
build-backend = "setuptools.build_meta"
